lox-tests/tests/variable/use_this_as_var.stderr
ERROR: Expected variable name after 'var' keyword
 --> 2:1
  |
2 | var this = "value";
  | ^------^
